--- a/static/hotels.html
+++ b/static/hotels.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body class="inner-page container-big">
+<body class="inner-page">
 
 <header class="main-header container">
   <h2 class="visually-hidden">Навигация по сайту</h2>
