--- a/static/hotels.html
+++ b/static/hotels.html
@@ -84,9 +84,8 @@
         <label class="visually-hidden" for="my-min-range">Ползунок выбора минимальной стоимости</label>
         <label class="visually-hidden" for="my-max-range">Ползунок выбора максимальной стоимости</label>
         <div class="slider-container" data-lbound='100' data-ubound='200'>
-          <hr />
-          <input type="range" min="0" max="2900" step="100" value="100" class="slider" id="my-min-range" oninput='this.parentNode.dataset.lbound=this.value;'>
-          <input type="range" min="200" max="3000" step="100" value="200" class="slider" id="my-max-range" oninput='this.parentNode.dataset.ubound=this.value;'>
+          <input type="range" min="0" max="2900" step="100" value="100" class="slider" id="my-min-range">
+          <input type="range" min="200" max="3000" step="100" value="200" class="slider" id="my-max-range">
         </div>
         <button class="button filters-submit-button" type="submit">Показать</button>
       </fieldset>
