Стилизация внутренней страницы

--- a/static/hotels.html
+++ b/static/hotels.html
@@ -108,10 +108,10 @@
     </ul>
     <ul class="sorting-from">
       <li>
-        <a class="sorting-from-high" href="#"></a>
+        <a class="sorting-from-high" href="#">Вверх</a>
       </li>
       <li>
-        <a class="sorting-from-down active" href="#"></a>
+        <a class="sorting-from-down active" href="#">Вниз</a>
       </li>
     </ul>
   </section>
