--- a/static/hotels.html
+++ b/static/hotels.html
@@ -75,19 +75,18 @@
         <ul class="cost-per-day-filter">
           <li class="filter-option-cost">
             <label class="visually-hidden" for="min-cost">От 0</label>
-            <input class="filter-input" type="text" min="0" max="2900" step="1" value="0" placeholder="От 0" name="min-cost" id="min-cost">
+            <input class="filter-input" type="text" min="0" max="2900" step="1" placeholder="От 0" name="min-cost" id="min-cost">
           </li>
           <li class="filter-option-cost">
             <label class="visually-hidden" for="max-cost">До 3000</label>
-            <input class="filter-input" type="text" min="100" max="3000" step="1" value="3000" placeholder="До 3000" name="max-cost" id="max-cost">
+            <input class="filter-input" type="text" min="100" max="3000" step="1" placeholder="До 3000" name="max-cost" id="max-cost">
           </li>
         </ul>
-        <label class="visually-hidden" for="min-range">Ползунок выбора минимальной стоимости</label>
-        <label class="visually-hidden" for="max-range">Ползунок выбора максимальной стоимости</label>
+        <label class="visually-hidden" for="min">Ползунок выбора минимальной стоимости</label>
+        <label class="visually-hidden" for="max">Ползунок выбора максимальной стоимости</label>
         <div class="range-slider">
-          <span class="rangeValues"></span>
-          <input type="range" min="0" max="2900" step="100" value="100" class="slider" id="min-range">
-          <input type="range" min="100" max="3000" step="100" value="200" class="slider" id="max-range">
+          <input type="range" class="min" min="0" max="3000" step="100" value="100" id="min">
+          <input type="range" class="max" min="100" max="3000" step="100" value="200" id="max">
         </div>
         <button class="button filters-submit-button" type="submit">Показать</button>
       </fieldset>
@@ -201,7 +200,7 @@
     <img src="img/developer.png" alt="Разработчик">
   </div>
 </footer>
-<script src="js/main.js"></script>
 <script src="js/nouislider.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
