--- a/static/hotels.html
+++ b/static/hotels.html
@@ -85,8 +85,8 @@
         <label class="visually-hidden" for="min">Ползунок выбора минимальной стоимости</label>
         <label class="visually-hidden" for="max">Ползунок выбора максимальной стоимости</label>
         <div class="range-slider">
-          <input type="range" class="min" min="0" max="3000" step="100" value="100" id="min">
-          <input type="range" class="max" min="100" max="3000" step="100" value="1500" id="max">
+          <input type="range" class="min" min="0" max="4000" step="100" value="100" id="min">
+          <input type="range" class="max" min="100" max="4000" step="100" value="3000" id="max">
         </div>
         <button class="button filters-submit-button" type="submit">Показать</button>
       </fieldset>
@@ -120,11 +120,11 @@
   <section class="results">
     <h2 class="visually-hidden">Результаты поиска</h2>
     <ul class="result">
-      <li class="results-item">
-        <h3 class="result-item">Amara Resort & Spa</h3>
+      <li class="result-item">
+        <h3 class="result-name">Amara Resort & Spa</h3>
         <span class="result-category">Гостиница</span>
         <span class="result-price">От 4000 Р.</span>
-        <span class="raiting">Рейтинг: 8,5</span>
+        <span class="result-rating">Рейтинг: 8,5</span>
         <p class="result-image">
           <a href="#">
             <img src="img/amara-resort.jpg" width="135" height="90" alt="Amara Resort & Spa">
@@ -133,11 +133,11 @@
         <a class="button" href="#">Подробнее</a>
         <a class="button button-reservation" href="#">Забронировать</a>
       </li>
-      <li class="results-item">
-        <h3 class="result-item">Desert Quail Inn</h3>
+      <li class="result-item">
+        <h3 class="result-name">Desert Quail Inn</h3>
         <span class="result-category">Мотель</span>
         <span class="result-price">От 3000 Р.</span>
-        <span class="raiting">Рейтинг: 8,9</span>
+        <span class="result-rating">Рейтинг: 8,9</span>
         <p class="result-image">
           <a href="#">
             <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Desert Quail Inn">
@@ -146,11 +146,11 @@
         <a class="button" href="#">Подробнее</a>
         <a class="button button-reservation" href="#">Забронировать</a>
       </li>
-      <li class="results-item">
-        <h3 class="result-item">Villas At Poco Diablo</h3>
+      <li class="result-item">
+        <h3 class="result-name">Villas At Poco Diablo</h3>
         <span class="result-category">Апартаменты</span>
         <span class="result-price">От 2000 Р.</span>
-        <span class="raiting">Рейтинг: 9,2</span>
+        <span class="result-rating">Рейтинг: 9,2</span>
         <p class="result-image">
           <a href="#">
             <img src="img/villas-at-poco-diablo.jpg" width="220" height="165" alt="Villas At Poco Diablo">
